# physical-ai

./: .gitignore  .mcp.json  .vercelignore  CLAUDE.md  docusaurus.config.ts  package-lock.json  package.json  physical-ai-and-humanoid-robots-textbook.md  test.md  tmpclaude-6104-cwd  vercel.json
.claude/: settings.local.json
.claude/agents/: chapter-planner.md  lesson-content-writer.md
.claude/commands/: sp.apply-pr-suggestions.md  sp.specify.md  sp.tasks.md
.github/workflows/: deploy-docusaurus.yml  sync_docs_to_qdrant.yml  sync_to_huggingface_space.yml
.specify/memory/: constitution.md
.specify/templates/: pr-suggestions-template.md
backend/: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  README.md  UPLOAD_MARKDOWN_TO_QDRANT_GUIDE.md  pyproject.toml  requirements.txt  vercel.json
backend/scripts/: markdown_to_qdrant.py
backend/src/: agent.py  config.py  main.py
backend/src/services/: qdrant_service.py  server.py  stores.py
backend/src/utils/: logging_config.py  rate_limiter.py  validation.py
backend/tests/integration/: test_rag_integration.py
backend/tests/unit/: test_qdrant_service.py
book-source/: .gitignore  components.json  docusaurus.config.ts  package-lock.json  package.json  tmpclaude-f97c-cwd
book-source/docs/: 01-introduction.md  03-the-ai-robot-brain-nvidia-isaac.md  04-vision-language-action.md  05-humanoid-robot-development.md  06-conversational-robotics.md  test.md
docs/: 01-introduction.md
docs/01-ros2-fundamentals/: _category_.json  lesson1.md  lesson2.md  lesson4.md  lesson6.md
specs/003-home-page/: plan.md  (+3 more)
(+242 files in other folders)
